Escape html en mensajes

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -45,7 +45,7 @@
       <div id="messages-wrapper"></div>
       <form id="messageForm" class="input-group my-3">
         <input type="text" class="form-control" id="inputMessage" name="message" placeholder="Escriba un mensaje..."
-          required disabled />
+          autocomplete="off" required disabled />
         <button id="btn-send" type="submit" class="btn btn-danger" disabled>Enviar</button>
       </form>
       <div id="messageErrors"></div>
